# celonis_kv_server

./: CMakeLists.txt  Consts.h  Endpoint.cpp  Endpoint.h  main.cpp
celonis_kv_client/src/: module-info.java
celonis_kv_client/src/kvclient/: Controller.java  Main.java  scene.fxml
config/: Consts.h
store/: Bucket.cpp  Bucket.h  BucketManager.cpp  BucketManager.h  Buffer.cpp  Buffer.h  BufferManager.cpp  BufferManager.h  EntryHeader.h  EntryPosition.h  KVStore.cpp  KVStore.h
store/bucket/: Bucket.cpp  Bucket.h  EntryHeader.h  EntryPosition.h
test/: tests.cpp
